--- a/_posts/2016-1-1-Meow001.md
+++ b/_posts/2016-1-1-Meow001.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title: meow
-tags: [Meow]
+title: 给交互设计初学者的完全自学指南
+tags: [InteractionDesign]
 ---
+
+[orig.Link](http://www.uisdc.com/head-first-interaction-design)
 
 <!--more-->
 
