--- a/_posts/2016-2-3-CRM.md
+++ b/_posts/2016-2-3-CRM.md
@@ -20,7 +20,7 @@ CRM不是管理你和客户的关系，是让你的管理和客户有关系。
 
 给消费者个理由立马行动。给消费一个动机，一个理由。
 
-#### 一般是用十个c来解读的：
+#### 一般用十个C来解读：
 
 1. 顾客数据（Customer Profile）： 指的是企业对顾客集成性信息的搜集，包括人口统计信息、消费心理特性、消费需求、消费行为模式、交易纪录、信用等等，以充分了解顾客轮廓。
 2. 顾客知识（Customer Knowledge）： 指的是与顾客有关，由信息转换而来，更深更广、更能指导CRM的一些经验法则与因果关系等。
@@ -37,14 +37,14 @@ CRM不是管理你和客户的关系，是让你的管理和客户有关系。
 
 总而言之，CRM乃是企业利用信息技术与流程设计，通过对顾客信息的集成性搜集与分析来充分了解顾客，并利用这些知识来精确地区隔有潜力的市场或提供一对一的定制化销售与服务，使得顾客从 P/S 中感受到最大的价值。
 
-#### 一般我们将它的实施依据顾客为中心的话分为四个阶段：
+#### 一般将它的实施依据顾客为中心分为四个阶段：
 
 阶段一、识别你的客户<br>
 阶段二、对客户进行差异分析<br>
 阶段三、与客户保持良性接触<br>
 阶段四、调整产品或服务以满足每一个客户的需求<br>
 
-#### 如果是以公司的CRM系统的实施的话分为：
+#### 如果是以公司的CRM系统的实施划分为：
 
 一、应用业务集成。将独立的市场管理，销售管理与售后服务进行集成，提供统一的运作平台。将多渠道来源的数据进行整合，实现业务数据的集成与共享。<br>
 二、业务数据分析。对CRM系统中的数据进行加工、处理与分析将使企业受益匪浅。对数据的分析可以采用OLAP的方式进行，生成各类报告；也可以采用业务（Business Information Warehouse）的处理手段，对数据做进一步的加工与数据挖掘，分析各数据指标间的关联关系，建立关联性的数据模型用于模拟和预测。这一步所取得的结果将是非常重要的，它不单反映业务现实状况同时也对未来业务计划的调整起到指导作用。<br>
