--- a/_posts/2016-2-24-piwik-2.md
+++ b/_posts/2016-2-24-piwik-2.md
@@ -4,10 +4,24 @@ title: PIWIK - Track Goals and Ecommerce Analytics
 tags: [Piwik]
 ---
 
+
+Track Goals and Measure Conversions
+-------
+
+
+
+
+
+
+
+
+
+------------
+
 Segmentation – Useful segments you can create
 -------
 
-### Custom segment: Customers
+#### Custom segment: Customers
 
 See everyone who bought something from you.
 
@@ -19,7 +33,7 @@ Did they come back or did they buy something and leave forever? <br>
 What did they do before they bought something? <br>
 
 
-### Custom segment: Returning customers
+#### Custom segment: Returning customers
 
 See everyone who bought something and then came back for more.
 
