--- a/_posts/2016-2-24-piwik-2.md
+++ b/_posts/2016-2-24-piwik-2.md
@@ -4,14 +4,100 @@ title: PIWIK - Track Goals and Ecommerce Analytics
 tags: [Piwik]
 ---
 
+<!--more-->
+
 
 Track Goals and Measure Conversions
 -------
 
+A goal can only be converted once per visit maximum. Piwik considers that the same Goal triggered twice or more is mostly likely because of spam or double clicks behaviors.
+
+A same visit can, however, convert several Goals (eg. "Buy a product" and "Contact support"). A visit that converts one or more goals is reported as a "Visit with conversion".
 
 
+### Report Analysis: What are the Top Converting Segments?
+
+Piwik Goal reports will help you answer some of these questions (and more!).
+
+1. You are buying advertisement on Google, Yahoo and Facebook. How can you measure the quality of the traffic sent by these ads, which campaigns and which keywords work best to convert visitors? Out of all of the websites bringing you traffic, which websites send you visitors that convert most? Can you develop stronger links with these websites, or find similar partners?
+2. If you use Piwik Campaign tracking, you can track the performance of your Newsletters, PPC Campaigns and keywords to see how each contribute to your Goal conversions and overall revenue. You can see exactly the revenue and conversion rates for each campaign and keyword. If you have affiliates linking to your pages, you can see exactly which affiliates bring you visitors with the most conversions and/or which have the highest revenue per visit.
+3. What time of day sees the lowest activity? By checking Goal conversions by hour, you can decide what time is best for migrations and system updates.
 
 
+#### An example of custom revenue tracking:
+
+- Create a goal "Package ordered".
+- Set "Allow multiple conversions per Visit" to "**Allow goal to be triggered more than once per Visit**". *This will ensure that if a user makes several orders per visit, Piwik will track one goal conversion for each order.*
+- Look at the goal id, which can be found in the first column of the "Edit goals" table.
+Users will then purchase a package on your website. To register a Goal conversion when someone buys a package that costs $39, you can call the JS function to register a Goal in Piwik. In the footer of your checkout page, inside the Piwik JS code you already have, you would simply write: `_paq.push([‘trackGoal', 7, priceOfMyObject]);` <br>
+The variable `priceOfMyObject` can be dynamically set by your website software.
+
+
+------------
+
+
+Ecommerce Analytics
+-------
+
+[Ecommerce Analytics | Piwik Docs](http://piwik.org/docs/ecommerce-analytics/) <br>
+[Piwik analytics | Odoo Apps](https://apps.openerp.com/apps/modules/8.0/website_analytics_piwik/)
+
+Once you have enabled Ecommerce tracking for a website, you need to implement tracking of the various Ecommerce interactions on your website. There are three main Ecommerce interactions that are tracked with Piwik:
+
+* Ecommerce Orders (and products),
+* Ecommerce Cart update (and products),
+* Product (and/or category) page views.
+
+### Tracking Ecommerce Orders & Items Purchased (required)
+
+Tracking Ecommerce orders and product details will allow Piwik to process reports on:
+
+- Product SKU,
+- Product name,
+- Top Product categories and general overview of Ecommerce performance in your online shop.
+
+To track Ecommerce orders, two Javascript functions are used:
+
+1. `addEcommerceItem(productSKU, productName, productCategory, price, quantity)` This adds a product into the order, and must be called for each product in the order. `productSKU` is a required parameter, it is also recommended that you send other parameters if they are applicable in your Ecommerce shop.
+2. `trackEcommerceOrder(orderId, grandTotal, subTotal, tax, shipping, discount)` This tracks an Ecommerce order and sends the data to your Piwik server, for both this order and products previously added. Only orderId and grandTotal (ie. revenue) are required.
+
+Here's an example of tracking an Ecommerce order containing two products – this code should be inserted in the "Order confirmation" page, once the visitor has checked out and issued payment. The Ecommerce code below must be added and generated based on the Order:
+
+{% highlight js %}
+
+[...]
+// add the first product to the order
+_paq.push([
+  'addEcommerceItem',
+  "9780786706211", // (required) SKU: Product unique identifier
+  "Endurance: Shackleton's Incredible Voyage", // (optional) Product name
+  "Adventure Books", // (optional) Product category. You can also specify an array of up to 5 categories eg. ["Books", "New releases", "Biography"]
+  8.8, // (recommended) Product price
+  1 // (optional, default to 1) Product quantity
+]);
+// Here you can add other products in the order
+[...]
+// Specifiy the order details to Piwik server & sends the data to Piwik server
+_paq.push([
+  'trackEcommerceOrder',
+  "A10000123", // (required) Unique Order ID
+  35, // (required) Order Revenue grand total (includes tax, shipping, and subtracted discount)
+  30, // (optional) Order sub total (excludes shipping)
+  5.5, // (optional) Tax amount
+  4.5, // (optional) Shipping amount
+  false // (optional) Discount offered (set to false for unspecified parameter)
+]);
+// we recommend to leave the call to trackPageView() on the Order confirmation page
+_paq.push(['trackPageView']);
+[...]
+
+{% endhighlight %}
+
+Important notes about the functions parameters:
+
+* price (parameter of addEcommerceItem() function), grandTotal, subTotal, tax, shipping, discount (parameters of trackEcommerceOrder() function) must be supplied as integer or floats, not as string. For example, all the following values are not valid: "14.4$", "EUR14.4", "14,4", "14.4". The following values are valid: 5, 3.3, 5.44. If your Ecommerce software provides the values as string only, you can call the Javascript function `parseFloat()` after making sure the string does not contain currency symbol or other characters, for example: parseFloat("554.20″).
+
+* orderId parameter is a unique string identifier for the order. If the page containing the trackEcommerceOrder() call is refreshed by the customer a few hours or days after the initial Order, Piwik will automatically discard the order as it is already recorded. You can use the same orderId for different Websites id, but for a given website, orderId must be unique.
 
 
 
@@ -21,7 +107,7 @@ Track Goals and Measure Conversions
 Segmentation – Useful segments you can create
 -------
 
-#### Custom segment: Customers
+### Custom segment: Customers
 
 See everyone who bought something from you.
 
@@ -33,7 +119,7 @@ Did they come back or did they buy something and leave forever? <br>
 What did they do before they bought something? <br>
 
 
-#### Custom segment: Returning customers
+### Custom segment: Returning customers
 
 See everyone who bought something and then came back for more.
 
@@ -57,7 +143,7 @@ What keywords were they using? <br>
 Why do you think those pages didn't answer their questions? <br>
 
 
-### Custom segment: Everyone who doesn’t bounce
+### Custom segment: Everyone who doesn't bounce
 
 See everyone who visited your website and stuck around.
 
@@ -66,13 +152,13 @@ See everyone who visited your website and stuck around.
 Questions to ask yourself<br>
 What do people who stick around on your website look for? <br>
 How do they get to your website? <br>
-Are they looking for something your website doesn’t provide? <br>
-Use your imagination, stay curious and you’ll stumble upon insights that will help you prosper. <br>
+Are they looking for something your website doesn't provide? <br>
+Use your imagination, stay curious and you'll stumble upon insights that will help you prosper. <br>
 
 
 ### Custom segment: Mobile visitors
 
-See everyone who accessed your website from a mobile device. Note: to access this segment, first enable the “DevicesDetection” plugin.
+See everyone who accessed your website from a mobile device. Note: to access this segment, first enable the "DevicesDetection" plugin.
 
 > *Device type* **is** `smartphone` **OR** *Device type* **is** `tablet` **OR** *Device type* **is** `feature phone`
 
