--- a/_posts/2016-2-24-piwik-2.md
+++ b/_posts/2016-2-24-piwik-2.md
@@ -33,7 +33,9 @@ Users will then purchase a package on your website. To register a Goal conversio
 The variable `priceOfMyObject` can be dynamically set by your website software.
 
 
+
 ------------
+
 
 
 Ecommerce Analytics
@@ -48,6 +50,7 @@ Once you have enabled Ecommerce tracking for a website, you need to implement tr
 * Ecommerce Cart update (and products),
 * Product (and/or category) page views.
 
+
 ### Tracking Ecommerce Orders & Items Purchased (required)
 
 Tracking Ecommerce orders and product details will allow Piwik to process reports on:
@@ -59,6 +62,7 @@ Tracking Ecommerce orders and product details will allow Piwik to process report
 To track Ecommerce orders, two Javascript functions are used:
 
 1. `addEcommerceItem(productSKU, productName, productCategory, price, quantity)` This adds a product into the order, and must be called for each product in the order. `productSKU` is a required parameter, it is also recommended that you send other parameters if they are applicable in your Ecommerce shop.
+
 2. `trackEcommerceOrder(orderId, grandTotal, subTotal, tax, shipping, discount)` This tracks an Ecommerce order and sends the data to your Piwik server, for both this order and products previously added. Only orderId and grandTotal (ie. revenue) are required.
 
 Here's an example of tracking an Ecommerce order containing two products – this code should be inserted in the "Order confirmation" page, once the visitor has checked out and issued payment. The Ecommerce code below must be added and generated based on the Order:
@@ -100,9 +104,90 @@ Important notes about the functions parameters:
 * orderId parameter is a unique string identifier for the order. If the page containing the trackEcommerceOrder() call is refreshed by the customer a few hours or days after the initial Order, Piwik will automatically discard the order as it is already recorded. You can use the same orderId for different Websites id, but for a given website, orderId must be unique.
 
 
+### Tracking Add to Cart & Items Added to the Cart (optional)
+
+Every time a visitor adds (or updates, deletes) an item from his/her cart, you can use Piwik to track the latest cart subtotal as well as products left in the cart. Tracking cart updates will allow you to see how much revenue was left in your visitors' carts for each day/week/etc, as well as getting reports on which products are most often left in the cart and which product categories are most often left abandoned in carts. Also, you can visualize each visit and the content of the cart they abandoned in the [Visitor Log](http://piwik.org/docs/real-time/).
+
+Some frequent causes for cart abandonment are:
+
+??
+
+To track Shopping Carts with Piwik, you would call the javascript function `trackEcommerceCartUpdate()` every time a user is adding, updating or deleting a product from the cart.
+
+Example tracking an Ecommerce order containing two products:
+
+{% highlight js %}
+
+[...]
+// add the first product to the order
+_paq.push([
+  'addEcommerceItem',
+  "9780786706211", // (required) SKU: Product unique identifier
+  "Endurance: Shackleton's Incredible Voyage", // (optional) Product name
+  ["Adventure Books", "Best sellers"], // (optional) Product category, string or array of up to 5 categories
+  8.8, // (recommended) Product price
+  1 // (optional, default to 1) Product quantity
+]);
+// Here it is important to add all other products found in the cart, even the products not updated by the current "Add to cart" click
+[...]
+// Records the cart for this visit
+_paq.push([
+  'trackEcommerceCartUpdate',
+  15.5]); // (required) Cart amount
+_paq.push(['trackPageView']);
+[...]
+
+{% endhighlight %}
+
+The code is added every time the “cart” page is loaded, or when the “Add to cart” button is clicked.
+
+
+### Tracking Product Page Views & Category Page Views (optional)
+
+To track a product or category page view, the function `setEcommerceView(productSKU, productName, categoryName, price)` is used, just before the call to `trackPageView()` on the product/category page.
+
+##### Example Tracking a Product Page View
+
+In this example, the following code is added to the Product page for the book “Endurance” which is in the category “Adventure Books”:
+
+{% highlight js %}
+[...]
+// all parameters are optional, but we recommend to set at minimum productSKU and productName
+_paq.push([
+  'setEcommerceView',
+  "9780786706211", // (required) SKU: Product unique identifier
+  "Endurance: Shackleton's Incredible Voyage", // (optional) Product name
+  "Adventure Books", // (optional) Product category, or array of up to 5 categories
+  20.11 // (optional) Product Price as displayed on the page
+]);
+_paq.push(['trackPageView']);
+[...]
+{% endhighlight %}
+
+##### Example tracking a Category page view
+
+This code is added on the Category page “Adventure Books”
+
+{% highlight js %}
+[...]
+// on a category page, productSKU and productName are not applicable and are set to false
+_paq.push([
+  'setEcommerceView',
+  productSku = false, // No product on Category page
+  productName = false, // No product on Category page
+  category = "Adventure Books" // Category Page, or array of up to 5 categories
+]);
+_paq.push(['trackPageView']);
+[...]
+{% endhighlight %}
+
+Check out the full documentation and example links at: [Ecommerce Analytics API Reference](http://developer.piwik.org/api-reference/reporting-api#Goals)
+
 
 
 ------------
+
+
 
 Segmentation – Useful segments you can create
 -------
