--- a/_posts/2016-2-21-piwik-1.md
+++ b/_posts/2016-2-21-piwik-1.md
@@ -73,6 +73,7 @@ If you are using an API Client such as the **Android SDK** or the **PHP Client**
 Once you have implemented User ID you may segment your traffic based on the User ID value. See the `userId` segment in the [Segmentation Reference](http://developer.piwik.org/api-reference/segmentation).
 
 
+-------------
 
 
 Event Tracking [†](http://piwik.org/docs/event-tracking/)
@@ -105,9 +106,10 @@ _paq.push(['trackEvent', 'Documentary', 'Rating', 'Thrive', 9.5]);
 Piwik reports for events will include the Total Event value, the Average event value as well as the Minimum and Maximum value, for each Event Category and each Event Name and each Event Action.
 
 
+-------------
 
 
-Content Tracking [†](http://piwik.org/docs/content-tracking/)
+Content Tracking [†](http://developer.piwik.org/guides/content-tracking)
 -------
 
 * content impression:
@@ -123,29 +125,16 @@ Once a page has loaded we log a content impression for each content block within
 
 As soon as a visitor *clicks* on a content block a content interaction is logged allowing you to analyze the ratio of content impressions to content interactions.
 
-
-| Term                     | Purpose       |
-| ------------------------ | ------------- |
+| Term                     | Purpose                  |
+| ------------------------ | ------------------------ |
 | Content block            | A container which consists of a content name, piece and a target. |
 | Content name             | A name that represents a content block. The name will be visible in reports. One name can belong to different content pieces. |
 | Content piece            | The actual content that was displayed, e.g. a path to a video/image/audio file, a text, ... |
-| Content target           | where the user was led to after interacting with the content block. |
-| Content impression       | any content block that was displayed on a page. optionally you can tell Piwik to track only impressions for visible content blocks. |
+| Content target           | Where the user was led to after interacting with the content block. |
+| Content impression       | Any content block that was displayed on a page. Optionally you can tell Piwik to track only impressions for visible content blocks. |
 | Content interaction      | an interaction is happening when a visitor is interacting with a content block. It can be any interaction. |
-| Content interaction rate | are neat      |
+| Content interaction rate | The ratio of content impressions to interactions. |
 
-
-
-| Term                     | Purpose       |
-| ------------------------ | ------------- |
-| Content block            | A container which consists of a content name, piece and a target. |
-| Content name             | 客户关系管理系统（CRM系统，或简称CRM）为企业从各种不同的角度来了解及区别顾客，以发展出适合顾客个别需要之产品/服务（P/S）的一种企业程序与信息技术的组合模式，其目的在于管理企业与顾客的关系，以使他们达到最高的满意度、忠诚度、维系率及利润贡献度，并同时有效率、选择性地找出与吸引好的新顾客。 |
-| Content piece            | CRM的概念很大，任何涉及到顾客识别、顾客忠诚、顾客沟通与营销的都可以算入CRM。根据各个行业各个品牌特点，都会有其CRM策略。比如一般零售都是 Financial Rewarding 的Loyalty Program[^ftnote1]，服务行业都是套餐、储值卡的绑定模式，而生产厂家的一般称为SCRM，叫做社会化的CRM，主要是他们大多数不直接和顾客接触，要通过渠道销售商品，所以他们通过注册、售后等方式识别终端顾客，再通过社会化方式让他们与之开展互动。当然不仅是生产厂商，任何CRM策略都可以向Social方式发展。但是CRM有几个人搞明白了？Social更有几个人搞明白了？Social不是建个微博、微信就算的。比如零售（假设你是苏宁、大润发）或生产厂家（假设你是三星、某奶粉、联合利华），你如何提供内容与服务，让你的互联更加具有社会化能力，让用户自己产生内容，引发更大量的用户参与与互动。要深刻理解你的消费者的互动动机。
- |
-| Content target           | where the user was led to after interacting with the content block. |
-| Content impression       | any content block that was displayed on a page. optionally you can tell Piwik to track only impressions for visible content blocks. |
-| Content interaction      | an interaction is happening when a visitor is interacting with a content block. It can be any interaction. |
-| Content interaction rate | are neat      |
 
 
 ### Tracking Content
@@ -196,17 +185,25 @@ Track content this way if you cannot easily change the markup of your site or if
 Be aware that each call to those methods will send one request to your Piwik tracker instance. Doing this too many times can cause performance problems.
 
 
+### Declarative content tracking
 
+
+
+-------------
 
 
 Track Goals and Measure Conversions [†](http://piwik.org/docs/tracking-goals-web-analytics/)
 -------
 
 
+-------------
+
 
 Custom Variables Analytics [†](http://piwik.org/docs/custom-variables/)
 -------
 
+
+-------------
 
 
 Custom Dimensions [†](http://piwik.org/docs/custom-dimensions/)
