--- a/_posts/2016-2-24-piwik-2.md
+++ b/_posts/2016-2-24-piwik-2.md
@@ -1,41 +1,10 @@
 ---
 layout: post
-title: PIWIK - Track Goals and Ecommerce Analytics
+title: PIWIK - Ecommerce Analytics & Segmentation
 tags: [Piwik]
 ---
 
 <!--more-->
-
-
-Track Goals and Measure Conversions
--------
-
-A goal can only be converted once per visit maximum. Piwik considers that the same Goal triggered twice or more is mostly likely because of spam or double clicks behaviors.
-
-A same visit can, however, convert several Goals (eg. "Buy a product" and "Contact support"). A visit that converts one or more goals is reported as a "Visit with conversion".
-
-
-### Report Analysis: What are the Top Converting Segments?
-
-Piwik Goal reports will help you answer some of these questions (and more!).
-
-1. You are buying advertisement on Google, Yahoo and Facebook. How can you measure the quality of the traffic sent by these ads, which campaigns and which keywords work best to convert visitors? Out of all of the websites bringing you traffic, which websites send you visitors that convert most? Can you develop stronger links with these websites, or find similar partners?
-2. If you use Piwik Campaign tracking, you can track the performance of your Newsletters, PPC Campaigns and keywords to see how each contribute to your Goal conversions and overall revenue. You can see exactly the revenue and conversion rates for each campaign and keyword. If you have affiliates linking to your pages, you can see exactly which affiliates bring you visitors with the most conversions and/or which have the highest revenue per visit.
-3. What time of day sees the lowest activity? By checking Goal conversions by hour, you can decide what time is best for migrations and system updates.
-
-
-#### An example of custom revenue tracking:
-
-- Create a goal "Package ordered".
-- Set "Allow multiple conversions per Visit" to "**Allow goal to be triggered more than once per Visit**". *This will ensure that if a user makes several orders per visit, Piwik will track one goal conversion for each order.*
-- Look at the goal id, which can be found in the first column of the "Edit goals" table.
-Users will then purchase a package on your website. To register a Goal conversion when someone buys a package that costs $39, you can call the JS function to register a Goal in Piwik. In the footer of your checkout page, inside the Piwik JS code you already have, you would simply write: `_paq.push([‘trackGoal', 7, priceOfMyObject]);` <br>
-The variable `priceOfMyObject` can be dynamically set by your website software.
-
-
-
-------------
-
 
 
 Ecommerce Analytics
