--- a/_posts/2016-2-24-piwik-2.md
+++ b/_posts/2016-2-24-piwik-2.md
@@ -10,8 +10,8 @@ tags: [Piwik]
 Ecommerce Analytics
 -------
 
-[Ecommerce Analytics | Piwik Docs](http://piwik.org/docs/ecommerce-analytics/) <br>
-[Piwik analytics | Odoo Apps](https://apps.openerp.com/apps/modules/8.0/website_analytics_piwik/)
+[Ecommerce Analytics -- Piwik Docs](http://piwik.org/docs/ecommerce-analytics/) <br>
+[Piwik analytics -- Odoo Apps](https://apps.openerp.com/apps/modules/8.0/website_analytics_piwik/)
 
 Once you have enabled Ecommerce tracking for a website, you need to implement tracking of the various Ecommerce interactions on your website. There are three main Ecommerce interactions that are tracked with Piwik:
 
